css/styles.css
/*!
    Title: Dev Portfolio Template
    Version: 1.2.1
    Last Change: 08/28/2017 // 11/05/2018
    Author: Ryan Fitzgerald
    Edited by: Graham Johnson
    Repo: https://github.com/RyanFitzgerald/devportfolio-template
    Issues: https://github.com/RyanFitzgerald/devportfolio-template/issues

    Description: This file contains all the styles associated with the page
    that don't come from third party libraries. This file gets compiled using
    Gulp and send to the /css folder which is then loaded on the page.
*/

body{
    font-family:'Lato', sans-serif;
    font-size:16px
}


.content{
    padding: 5px;
}

.sticky{
    position: fixed;
    display: block;
    z-index: 1;
    top: 0;
    width: 100%;
}

.sticky + .content {
    padding-top: 102px;
}

body.active{
    overflow:hidden;
    z-index:-1
}.no-js #experience-timeline>

div{
    background:#fff;
    padding:10px;
    margin-bottom:10px;
    border:1px solid #dcd9d9
}.no-js #experience-timeline>

div h3{
    font-size:1.5em;
    font-weight:300;
    color:#374054;
    display:inline-block;
    margin:0
}.no-js #experience-timeline>

div h4{
    font-size:1.2em;
    font-weight:300;
    color:#7e8890;
    margin:0 0 15px 0
}.no-js #experience-timeline>

div p{
    color:#74808a;
    font-size:0.9em;
    margin:0
}
.no-js #experience-timeline:before,.no-js #experience-timeline:after{
    content:none
}

@keyframes dropHeader{
    0%{
        transform:translateY(-100%)
    }
    100%{
        transform:translateY(0)
    }
}
header{
    position:absolute;
    top:0;
    left:0;
    right:0;
    text-align:center;
    z-index:10;
    animation-name:dropHeader;
    animation-iteration-count:1;
    animation-timing-function:ease;
    animation-duration:0.75s
}

header ul{
    display:inline-block;
    background:#fff;
    text-align:center;padding:10px;
    margin:0;
    border-bottom-right-radius:4px;
    border-bottom-left-radius:4px;
}

header li{
    display:inline-block
}

header a{
    display:block;
    color:#154e74;
    padding:10px;
}

header a:hover{
    color:#217dbb;
    text-decoration:none;
    background:#eee;
    border-radius:4px;
}

header a:focus{
    color:#638068;
    text-decoration:none;
}

header.active{
    display:block;
}

header.sticky{
    position:fixed;
    z-index:999
}

#menu.active{
    display:block
}

#mobile-menu-open{
    display:none;
    cursor:pointer;
    position:fixed;
    right:15px;
    top:10px;
    color:#3498db;
    font-size:1.5em;
    z-index:20;
    padding:0 7px;
    border-radius:4px;
    background:#fff;
}

#mobile-menu-close{
    display:none;
    text-align:right;
    width:100%;
    background:#fff;
    font-size:1.5em;
    padding-right:15px;
    padding-top:10px;
    cursor:pointer;
    color:#3498db
}

#mobile-menu-close span{
    font-size:0.5em;
    text-transform:uppercase
}
#mobile-menu-close i{
    vertical-align:middle
}

footer{
    padding:50px 0
}

.copyright{
    padding-top:20px
}

.copyright p{
    margin:0;
    color:#74808a
}

.top{
    text-align:center
}

.top span{
    cursor:pointer;
    display:block;
    margin:15px auto 0 auto;
    width:35px;
    height:35px;
    border-radius:50%;
    border:3px solid #7f8488;
    text-align:center;

}

.top i{
    color:#20547e;
    animation:pulsate 1s ease;
    animation-iteration-count:infinite;
}

.social{
    text-align:right
}

.social ul{
    margin:5px 0 0 0;
    padding:0
}

.social li{
    display:inline-block;
    font-size:1.25em;
    list-style:none
}

.social a{
    display:block;
    color:#74808a;
    padding:10px
}

.social a:hover{
    color:#3498db
}

.btn-rounded-white{
    display:inline-block;
    color:#fff;
    padding:15px 25px;
    border:3px solid #fff;
    border-radius:30px;
    transition:.5s ease all
}

.btn-rounded-white:hover{
    color:#23628b;
    background:#fff;
    text-decoration:none
}

.shadow{
    box-shadow:0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24)
}

.shadow-large{
    box-shadow:0 3px 6px rgba(0,0,0,0.08),0 3px 6px rgba(0,0,0,0.15)
}

.heading{
    position:relative;
    display:inline-block;
    font-size:2em;
    font-weight:300;
    margin:0 0 30px 0
}

.heading:after{
    position:absolute;
    content:'';
    top:100%;
    height:1px;
    width:50px;
    left:0;
    right:0;
    margin:0 auto;
    background:#3498db
}

.background-alt{
    background:#f2f2f5
}

#lead{
    position:relative;
    height:100vh;
    min-height:500px;
    max-height:1080px;
    background:url(../images/mountain_fractal.jpg) repeat-x;
    background-size:cover;
    background-blend-mode: luminosity;
    
    padding:15px;
    overflow:hidden
}

@keyframes slide{
    0%{
        transform: translate3d(0,0,0);
    }
    100%{
        transform: translate3d(-1692px,0,0);
    }
}

#lead-content{
    position:absolute;
    z-index:10;
    top:50%;
    left:50%;
    transform:translate(-50%, -50%);
    text-align:center
}

#lead-content h1,#lead-content h2{
    margin:0
}

#lead-content h1{
    color:#fff;
    font-weight:900;
    font-size:5em;
    text-transform:uppercase;
    letter-spacing:0.05em;
    line-height:0.9em;
    margin-bottom: 30px;
    z-index:3;
}

#lead-content h2{
    color:#0e2142ef;
    font-weight:500;
    font-size:2.25em;
    margin-bottom:1px;
    letter-spacing:0.0001em;
    z-index: 3;
}

#lead-overlay{
    position:absolute;
    height:100%;
    width:100%;
    top:0;
    right:0;
    bottom:0;
    left:0;
    background:rgba(121, 189, 147, 0.45);
    z-index:1;
    
}

#lead-down{
    position:absolute;
    left:0;
    right:0;
    width:100%;
    text-align:center;
    z-index:10;
    bottom:15px;
    color:rgb(255, 255, 255)
}

#lead-down span{
    cursor:pointer;
    display:block;
    margin:0 auto;
    width:35px;
    height:35px;
    border-radius:50%;
    border:3px solid #81c5f1;
    text-align:center
}

#lead-down i{
    animation:pulsate 1s ease;
    animation-iteration-count:infinite;
    padding-top:5px
}
/* ... */

